# GaMMA-example

./: .gitignore  README.md  pyproject.toml  test_gamma.py
data/: PREM.csv  groud_truth.csv  phase_picks.csv  stations.json
example_res/: catalogs_global.csv  catalogs_local.csv  picks_global.csv  picks_local.csv
visualize/: show_gamma_result.ipynb
